buttons working, spacing edits, transition position fixed

--- a/object-meditation/style.css
+++ b/object-meditation/style.css
@@ -10,7 +10,7 @@ body {
 
 body {
   background-color: #004DFF;
-  color: yellow;
+  color: white;
   text-align: center;
   font-size: 2em;
 }
@@ -18,32 +18,49 @@ h1{
   font-family: 'Raleway', sans-serif;
   font-size: 3em;
 }
+
+p{
+  margin-bottom: 20%;
+}
+
 .secondary-headers {
+  color: yellow;
   font-family: 'Lato', sans-serif;
   width: 100%;
   display: block;
-  margin: auto;
+  margin-bottom: 2em;
 }
+
 .screen-transition {
-  position: absolute;
+  position: fixed;
+  display: flex;
   justify-content: flex-end;
   object-fit: none;
   object-position: top;
-  width: 100%;
-  height: 200px;
+  width: 168%;
+  height: 26%;
   bottom: 0px;
 }
 @media only screen and (max-width: 600px) {
   body {
     background-color: lightblue;
   }
-
-.activity-1-buttons{
-  display: flex;
-  justify-content:center;
-  padding: inherit;
-  margin: inherit;
-
 }
 
+.activity-1-buttons{
+  margin: 2em;
+  display: flex;
+  justify-content: space-around;
+  padding: inherit;
+  margin: inherit;
+}
+
+#lovable{
+  display: none;
+}
+#huggable{
+  display: none;
+}
+#comical{
+  display: none;
 }
